--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114.png">
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/apple-touch-icon-72.png">
         <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57.png">
-        <link rel="shortcut icon" href="images/ico/favicon.ico">
+        <link rel="shortcut icon" href="images/ico/ico/favicon.ico">
     </head>
     
     <body>
@@ -37,7 +37,7 @@
             <div class="navbar-inner">
                 <div class="container">
                     <a href="#" class="brand">
-                        <img src="images/logo.png" width="120" height="40" alt="Logo" />
+                        <img src="images/logopantanal.png" width="120" height="40" alt="Logo" />
                         <!-- This is website logo -->
                     </a>
                     <!-- Navigation button, visible on small resolution -->
@@ -71,7 +71,7 @@
                 <div class="container">
                     <!-- Start first slide -->
                     <div class="da-slide">
-                        <h2 class="fittext2">Welcome to pluton theme</h2>
+                        <h2 class="fittext2">Pantanal</h2>
                         <h4>Clean & responsive</h4>
                         <p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane.</p>
                         <a href="#" class="da-link button">Read more</a>
@@ -82,7 +82,7 @@
                     <!-- End first slide -->
                     <!-- Start second slide -->
                     <div class="da-slide">
-                        <h2 class="fittext2">Welcome to pluton theme</h2>
+                        <h2 class="fittext2">Fauna e Flora</h2>
                         <h4>Clean & responsive</h4>
                         <p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane.</p>
                         <a href="#" class="da-link button">Read more</a>
@@ -91,7 +91,7 @@
                         </div>
                     </div>
                     <div class="da-slide">
-                        <h2>Easy management</h2>
+                        <h2>Sopa Paraguaia</h2>
                         <h4>Easy to use</h4>
                         <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
                         <a href="#" class="da-link button">Read more</a>
@@ -102,7 +102,7 @@
                     <!-- End second slide -->
                     <!-- Start third slide -->
                     <div class="da-slide">
-                        <h2>Revolution</h2>
+                        <h2>Contos</h2>
                         <h4>Customizable</h4>
                         <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
                         <a href="#" class="da-link button">Read more</a>
@@ -112,7 +112,7 @@
                     </div>
                     <!-- Start third slide -->
                     <div class="da-slide">
-                        <h2>Revolution</h2>
+                        <h2>projeto igualdade para todos</h2>
                         <h4>Customizable</h4>
                         <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
                         <a href="#" class="da-link button">Read more</a>
