--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     </div>
                     <div class="da-slide">
                         <h2>Sopa Paraguaia</h2>
-                        <h4>Easy to use</h4>
+                        <h4>Video da receita</h4>
                         <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
                         <a href="#" class="da-link button">Read more</a>
                         <div class="da-img">
@@ -113,8 +113,8 @@
                     <!-- Start third slide -->
                     <div class="da-slide">
                         <h2>projeto igualdade para todos</h2>
-                        <h4>Customizable</h4>
-                        <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+                        <h4>projeto integrador I</h4>
+                        <p>Este projeto visa entregar o conhecimento de forma didática para bom entendimento do assunto, afim de acabar com intolerância e preconceito.</p>
                         <a href="#" class="da-link button">Read more</a>
                         <div class="da-img">
                             <img src="images/Slider03.png" width="320" alt="image03">
@@ -135,36 +135,36 @@
             <div class="container">
                 <!-- Start title section -->
                 <div class="title">
-                    <h1>What We Do?</h1>
+                    <h1>Texto de 100 palavras</h1>
                     <!-- Section's title goes here -->
-                    <p>Duis mollis placerat quam, eget laoreet tellus tempor eu. Quisque dapibus in purus in dignissim.</p>
+                    <p>Este projeto é um projeto interdisciplinar</p>
                     <!--Simple description for section goes here. -->
                 </div>
                 <div class="row-fluid">
                     <div class="span4">
                         <div class="centered service">
                             <div class="circle-border zoom-in">
-                                <img class="img-circle" src="images/Service1.png" alt="service 1">
+                                <img class="img-circle" src="images/etec.png" alt="service 1">
                             </div>
-                            <h3>Modern Design</h3>
+                            <h3>ETEC MCM</h3>
                             <p>We Create Modern And Clean Theme For Your Business Company.</p>
                         </div>
                     </div>
                     <div class="span4">
                         <div class="centered service">
                             <div class="circle-border zoom-in">
-                                <img class="img-circle" src="images/Service2.png" alt="service 2" />
+                                <img class="img-circle" src="images/Recursos humanos.png" alt="service 2" />
                             </div>
-                            <h3>Powerfull Theme</h3>
+                            <h3>Recursos Humanos</h3>
                             <p>We Create Modern And Powerful Theme With Lots Animation And Features</p>
                         </div>
                     </div>
                     <div class="span4">
                         <div class="centered service">
                             <div class="circle-border zoom-in">
-                                <img class="img-circle" src="images/Service3.png" alt="service 3">
+                                <img class="img-circle" src="images/logooo.png" alt="service 3">
                             </div>
-                            <h3>Clean Code</h3>
+                            <h3>Projeto Interdisciplinar</h3>
                             <p>We Create Modern And Powerful Html5 And CSS3 Code Easy For Read And Customize.</p>
                         </div>
                     </div>
@@ -177,7 +177,7 @@
             <div class="triangle"></div>
             <div class="container">
                 <div class=" title">
-                    <h1>Have You Seen our Works?</h1>
+                    <h1>Apresentação dos membros</h1>
                     <p>Duis mollis placerat quam, eget laoreet tellus tempor eu. Quisque dapibus in purus in dignissim.</p>
                 </div>
                 <ul class="nav nav-pills">
@@ -198,27 +198,27 @@
                 <div id="single-project">
                     <div id="slidingDiv" class="toggleDiv row-fluid single-project">
                         <div class="span6">
-                            <img src="images/Portfolio01.png" alt="project 1" />
+                            <img src="images/milena.png" alt="project 1" />
                         </div>
                         <div class="span6">
                             <div class="project-description">
                                 <div class="project-title clearfix">
-                                    <h3>Webste for Some Client</h3>
+                                    <h3>Milena Ribeiro</h3>
                                     <span class="show_hide close">
                                         <i class="icon-cancel"></i>
                                     </span>
                                 </div>
                                 <div class="project-info">
                                     <div>
-                                        <span>Client</span>Some Client Name</div>
+                                        <span>Nome</span>Milena Aparecida Alves Ribeiro</div>
                                     <div>
-                                        <span>Date</span>July 2013</div>
+                                        <span>Aniver</span> Abril, 20</div>
                                     <div>
-                                        <span>Skills</span>HTML5, CSS3, JavaScript</div>
+                                        <span> Área interessada</span> Psicologia</div>
                                     <div>
-                                        <span>Link</span>http://examplecomp.com</div>
+                                        <span>Instagram</span>@_milenaribeiro1</div>
                                 </div>
-                                <p>Believe in yourself! Have faith in your abilities! Without a humble but reasonable confidence in your own powers you cannot be successful or happy.</p>
+                                <p>Óla galera, Meu nome é Milena e atualmente estou cursando o primeiro ano de recursos humanos, sou ariana e tenho uma característica muito forte a competição</p>
                             </div>
                         </div>
                     </div>
