--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <head>
         <meta charset=utf-8>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Pluton Theme by BraphBerry.com</title>
+        <title>Ensina Jovens</title>
         <!-- Load Roboto font -->
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
         <!-- Load css styles -->
@@ -177,7 +177,7 @@
             <div class="triangle"></div>
             <div class="container">
                 <div class=" title">
-                    <h1>Apresentação dos membros</h1>
+                    <h1>Apresentação dos professores
                     <p>Duis mollis placerat quam, eget laoreet tellus tempor eu. Quisque dapibus in purus in dignissim.</p>
                 </div>
                 <ul class="nav nav-pills">
@@ -871,8 +871,8 @@
             <div class="section secondary-section">
                 <div class="container">
                     <div class="title">
-                        <h1>Contact Us</h1>
-                        <p>Duis mollis placerat quam, eget laoreet tellus tempor eu. Quisque dapibus in purus in dignissim.</p>
+                        <h1>Caso precise de ajuda, entre em contato conosco :)
+                        <p>Acesse nosso instagram <a href=https://www.instagram.com/p/CPWCx6BFVRw/?utm_source=ig_web_copy_link">@igualdade_paratodos
                     </div>
                 </div>
                 <div class="map-wrapper">
@@ -880,7 +880,7 @@
                     <div class="container">
                         <div class="row-fluid">
                             <div class="span5 contact-form centered">
-                                <h3>Say Hello</h3>
+                                <h3> Converse conosco
                                 <div id="successSend" class="alert alert-success invisible">
                                     <strong>Well done!</strong>Your message has been sent.</div>
                                 <div id="errorSend" class="alert alert-error invisible">There was an error.</div>
@@ -905,7 +905,7 @@
                                     </div>
                                     <div class="control-group">
                                         <div class="controls">
-                                            <button id="send-mail" class="message-btn">Send message</button>
+                                            <button id="send-mail" class="message-btn">Enviar
                                         </div>
                                     </div>
                                 </form>
@@ -915,12 +915,13 @@
                 </div>
                 <div class="container">
                     <div class="span9 center contact-info">
-                        <p>123 Fifth Avenue, 12th,Belgrade,SRB 11000</p>
-                        <p class="info-mail">ourstudio@somemail.com</p>
-                        <p>+11 234 567 890</p>
-                        <p>+11 286 543 850</p>
+                        <p>R. Bélgica, 88 - Jardim Alvorada, Ribeirão Pires - SP, 09402-060</p>
+                        <p class="info-mail">projetointegrador4grupo4@gmailcom</p>
+                        <p>+55 11 96092-4510</p>
+                        <p>+55 11 97333-0436</p>
                         <div class="title">
-                            <h3>We Are Social</h3>
+                            <h3>Para mais contatos acesse nossas redes sociais
+                                           </h3>
                         </div>
                     </div>
                     <div class="row-fluid centered">
@@ -963,7 +964,7 @@
         <!-- Contact section edn -->
         <!-- Footer section start -->
         <div class="footer">
-            <pShared by <i class="fa fa-love"></i><a href="https://bootstrapthemes.co">BootstrapThemes</a>
+            <pShared by <i class="fa fa-love"></i><a href="https://bootstrapthemes.co">Ensina Jovens</a>
 </p>
         </div>
         <!-- Footer section end -->
@@ -984,7 +985,7 @@
         <script type="text/javascript" src="js/jquery.placeholder.js"></script>
         <script type="text/javascript" src="js/jquery.inview.js"></script>
         <!-- Load google maps api and call initializeMap function defined in app.js -->
-        <script async="" defer="" type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false&callback=initializeMap"></script>
+        <script async="" defer="" type="text/javascript" src="https://goo.gl/maps/mY8yzaoZdr7vSPjLA"></script>
         <!-- css3-mediaqueries.js for IE8 or older -->
         <!--[if lt IE 9]>
             <script src="js/respond.min.js"></script>
