sexta atualização 2709/mimi

--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
                     <div class="nav-collapse collapse pull-right">
                         <ul class="nav" id="top-navigation">
                             <li class="active"><a href="#home">Home</a></li>
-                            <li><a href="#service">Services</a></li>
+                            <li><a href="#service">Apoio</a></li>
                             <li><a href="#portfolio">Portfolio</a></li>
-                            <li><a href="#about">About</a></li>
-                            <li><a href="#clients">Clients</a></li>
+                            <li><a href="#about">integrantes</a></li>
+                            <li><a href="#clients">Motivação</a></li>
                             <li><a href="#price">Price</a></li>
-                            <li><a href="#contact">Contact</a></li>
+                            <li><a href="#contact">Contato</a></li>
                         </ul>
                     </div>
                     <!-- End main navigation -->
@@ -83,8 +83,8 @@
                     <!-- Start second slide -->
                     <div class="da-slide">
                         <h2 class="fittext2">Fauna e Flora</h2>
-                        <h4>Clean & responsive</h4>
-                        <p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane.</p>
+                        <h4>Sobre</h4>
+                        <p>A flora e a fauna do Pantanal, além de extremamente valiosas apresentam uma grande diversificação no seu conteúdo</p>
                         <a href="#" class="da-link button">Read more</a>
                         <div class="da-img">
                             <img src="images/Slider01.png" alt="image01" width="320">
@@ -147,7 +147,7 @@
                                 <img class="img-circle" src="images/etec.png" alt="service 1">
                             </div>
                             <h3>ETEC MCM</h3>
-                            <p>We Create Modern And Clean Theme For Your Business Company.</p>
+                            <p>A ETEC MCM é a nossa instituição de ensino, localizada na cidade de Ribeirão pires, aonde cursamos o Ensino Médio integrador ao curso técnico de Recursos Humanos</p>
                         </div>
                     </div>
                     <div class="span4">
@@ -156,7 +156,8 @@
                                 <img class="img-circle" src="images/Recursos humanos.png" alt="service 2" />
                             </div>
                             <h3>Recursos Humanos</h3>
-                            <p>We Create Modern And Powerful Theme With Lots Animation And Features</p>
+                            <p>O curso de Recursos Humanos da ETEC visa promover o desenvolvimento humano, a administração pessoal, e ensinar a colaborar em uma organização.
+                            </p>
                         </div>
                     </div>
                     <div class="span4">
@@ -165,7 +166,7 @@
                                 <img class="img-circle" src="images/logooo.png" alt="service 3">
                             </div>
                             <h3>Projeto Interdisciplinar</h3>
-                            <p>We Create Modern And Powerful Html5 And CSS3 Code Easy For Read And Customize.</p>
+                            <p>Esse projeto apresenta um portfólio com a intenção de apresentar os projetos desenvolvidas pelos integrantes do grupo ao longo do ano letivo, com as matérias abaixo:</p>
                         </div>
                     </div>
                 </div>
@@ -182,28 +183,28 @@
                 </div>
                 <ul class="nav nav-pills">
                     <li class="filter" data-filter="all">
-                        <a href="#noAction">All</a>
+                        <a href="#noAction">Todos</a>
                     </li>
-                    <li class="filter" data-filter="web">
-                        <a href="#noAction">Web</a>
+                    <li class="filter" data-filter="fauna">
+                        <a href="#noAction">Fauna</a>
                     </li>
-                    <li class="filter" data-filter="photo">
-                        <a href="#noAction">Photo</a>
+                    <li class="filter" data-filter="flora">
+                        <a href="#noAction">Flora</a>
                     </li>
-                    <li class="filter" data-filter="identity">
-                        <a href="#noAction">Identity</a>
+                    <li class="filter" data-filter="culinaria">
+                        <a href="#noAction">Culinária</a>
                     </li>
                 </ul>
                 <!-- Start details for portfolio project 1 -->
                 <div id="single-project">
                     <div id="slidingDiv" class="toggleDiv row-fluid single-project">
                         <div class="span6">
-                            <img src="images/milena.png" alt="project 1" />
+                            <img src="images/fauna/pantanal4.jpg" alt="project 1" />
                         </div>
                         <div class="span6">
                             <div class="project-description">
                                 <div class="project-title clearfix">
-                                    <h3>Milena Ribeiro</h3>
+                                    <h3>Fauna</h3>
                                     <span class="show_hide close">
                                         <i class="icon-cancel"></i>
                                     </span>
@@ -448,9 +449,9 @@
                     </div>
                     <!-- End details for portfolio project 9 -->
                     <ul id="portfolio-grid" class="thumbnails row">
-                        <li class="span4 mix web">
+                        <li class="span4 mix fauna">
                             <div class="thumbnail">
-                                <img src="images/Portfolio01.png" alt="project 1">
+                                <img src="images/fauna/pantanal4.jpg" alt="project 1">
                                 <a href="#single-project" class="more show_hide" rel="#slidingDiv">
                                     <i class="icon-plus"></i>
                                 </a>
@@ -459,9 +460,9 @@
                                 <div class="mask"></div>
                             </div>
                         </li>
-                        <li class="span4 mix photo">
+                        <li class="span4 mix fauna">
                             <div class="thumbnail">
-                                <img src="images/Portfolio02.png" alt="project 2">
+                                <img src="images/fauna/arvore.jpg" alt="project 2">
                                 <a href="#single-project" class="show_hide more" rel="#slidingDiv1">
                                     <i class="icon-plus"></i>
                                 </a>
